--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,8 @@
+/* resources/css/app.css */
 @import 'tailwindcss';
+@import './colors.css';
+@import './fonts.css';
+@import './page.css';
 
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
