--- a/resources/css/colors.css
+++ b/resources/css/colors.css
@@ -3,6 +3,7 @@
 	/* Colors form layout file */
 	--clr-custom-green-100: #c8fda1; /* Info Green */
 	--clr-custom-green-200: #b0fd79; /* Btn Green */
+	--clr-custom-green-300: #006a53; /* Active Green */
 	--clr-custom-green-400:#015A46;/* Navi Green */
 	--clr-custom-green-600: #024031; /* Header Green */
 	--clr-custom-white: #f8f8f8; /* Background White */
