--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,13 +1,17 @@
 /* resources/css/app.css */
-@import 'tailwindcss';
+
+
 @import './colors.css';
 @import './fonts.css';
 @import './page.css';
 
-@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
-@source '../../storage/framework/views/*.php';
-@source '../**/*.blade.php';
-@source '../**/*.js';
+@import "tailwindcss";
+
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
+
 
 @theme {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
